Sat Sep  5 23:11:48 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/String.cc: Added patch by Zvi Har'El
	<rl@math.technion.ac.il> to indexOf function to prevent "false
	positive" matches.

	* installdir/nomatch.html, installdir/syntax.html: Fixed reference
	to ht://Dig 3.0.

	* htdig/Document.cc: Use robotstxt_name as user-agent as a more
	consistent approach.

	* htsearch/parser.cc: Convert "%01" to "|" to support <SELECT
	... MULTIPLE> tags.

Thu Sep  3 20:53:51 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Makefile.in: Remove reference to -lgdbm

	* htsearch/Display.cc: Send Content-type header after all variable
	expansion is completed.

	* htcommon/WordList.cc: Removed warning under egcs-1.1

Tue Aug 11 08:58:34 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

        * htsearch/Display.cc, htdig/Retriever.h,
	htdig/Retriever.cc, htdig/Parsable.h, htdig/Parsable.cc,
	htdig/HTML.h, htdig/HTML.cc, htcommon/defaults.cc,
	htcommon/DocumentRef.h, htcommon/DocumentRef.cc,
	htcommon/DocumentDB.cc:
	Second patch for META description tags. New field in DocDB for the
        desc., space in word DB w/ proper factor.

	* htmerge/docs.cc: Added statistic for total size of docs in DB.
	
Thu Aug  6 10:15:22 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc: Added "local_dir_doc" config option,
	the default filename in a directory.

	* htcommon/defaults.cc: Fixed "elipses" spelling mistake,
	local_dir_doc as above
	
Tue Aug  4 11:34:46 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration.cc: Added fix by Philippe Rochat
	<prochat@lbdsun.epfl.ch> to remove whitespace after config
	options.

	* htdig/HTML.cc, htdig/HTML.h: Added support for META robots tags.
	
Mon Aug  3 16:50:46 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

        * htsearch/ResultList.cc, htnotify/htnotify.cc,
        htmerge/htmerge.cc, htmerge/docs.cc, htlib/String.cc,